    3. Document.cookie= does not restrict the cookie by path and domain


Revision History:
 4-Feb-2003
Additions:
    1. Added support for <iframe> tag. IFrames work just like regular frames, except that they are embedded in a response
       without a <frameset> tag. IFrame support is controlled by the ClientProperties.iframeSupported property.
13-Jan-2003
    Notes: upgraded NekoHTML to 0.7.2 which no longer generates superfluous <form> tags.

10-Jan-2003
    Thanks to Alex Beggs for noting the mishandling of non-JavaScript scripts and providing a test case.

Problems fixed:
    1. Scripts marked as something besides JavaScript are now ignored.

 9-Jan-2003
 Acknowledgements:
    Thanks to James Howe for noting the mispelling of the getElementById method

Problems fixed:
    1. Corrected spelling of getElementById

 3-Jan-2003
Additions:
    1. ServletRunner.shutDown() will invoke the destroy() methods of any servlets which have been invoked
       through that servlet runner.
    2. ServletUnit now supports HttpServletRequest.getHeaderNames

30-Dec-2002
Additions:
    1. Added support for document.getElementByID
    2. all HTML elements with id attributes are now accessible

27-Dec-2002
Additions:
    1. Added getFragmentIdentifier() to WebRequestSource (parent of WebLink, WebForm, and WebImage)

26-Dec-2002
Additions:
    1. WebResponse and TableCell now support the getElementWithID method, which returns any supported HTMLElement, given its ID.
       Supported HTMLElement objects include WebForm, WebLink, WebTable, WebImage, WebApplet, FormControl, TableCell, and TableRow.
    2. The Form.target property is now supported

Problems fixed:
    1. Forms prematurely closed because of improper nesting will now contain any controls defined before the next form.
       At present, this only works with the JTidy parser.

25-Dec-2002
Notes:
    1. get...WithID was incorrectly doing case insensitive matches.  It is now case-sensitive, since that is the way the