@@ -15,6 +15,8 @@ Revision History:
 Additions:
     1. Added support for <iframe> tag. IFrames work just like regular frames, except that they are embedded in a response
        without a <frameset> tag. IFrame support is controlled by the ClientProperties.iframeSupported property.
+    2. ServletUnit now handles https requests, marking them as "secure."
+
 13-Jan-2003
     Notes: upgraded NekoHTML to 0.7.2 which no longer generates superfluous <form> tags.
 
